Upgrade Java source/target from 1.5 to 17
- Apply instanceof pattern matching
- Add @Serial annotation to serialVersionUID fields
- Replace new Integer/Long with valueOf
- Convert multiline strings to text blocks
- Update CI workflows to use JDK 17

Builds successfully with JDK 17.